<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginok"
    tools:context=".activities.RegistrationActivity">

    <TextView
        android:id="@+id/txtTitleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/signup"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".18" />

    <EditText
        android:id="@+id/edtNameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:hint="@string/name"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleSignUp"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/edtEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_person_pin_24"
        android:hint="@string/email"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNameRegister"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailRegister"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/edtRePasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:hint="@string/rePassword"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordRegister"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:background="@drawable/text_bg"
        android:padding="15dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRePasswordRegister"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/txtAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordRegister"
        app:layout_constraintHorizontal_bias=".3"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias=".2" />

    <TextView
        android:id="@+id/txtSignInRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:minHeight="48dp"
        android:onClick="signIn"
        android:text="@string/signin"
        android:textColor="@color/lightGreen"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtAlready"
        app:layout_constraintStart_toEndOf="@+id/txtAlready"
        app:layout_constraintTop_toTopOf="@+id/txtAlready" />
</androidx.constraintlayout.widget.ConstraintLayout>