<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landscaping"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/title_landscaping_des"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_landscaping1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_landscaping_des"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_landscaping"
        android:textColor="@color/backgroundcolor"
        android:textSize="20sp"
        android:textStyle="italic"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_landscaping_des" />

    <Button
        android:id="@+id/btnLandscapingDesign"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/title_autoLandscaping"
        android:background="@drawable/text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_landscaping_des" />

    <Button
        android:id="@+id/btnManualLandcaping"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/text_bg"
        android:gravity="center"
        android:text="@string/title_manualLanscaping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLandscapingDesign" />

</androidx.constraintlayout.widget.ConstraintLayout>