<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <TextView
            android:id="@+id/txtTitlePlantAccesories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/title_flower"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imgPlantAccessories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgPlantAccessories" />


        <ImageView
            android:id="@+id/imgPlantAccessories"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:src="@drawable/leaves"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="28dp"
            android:text="@string/title_price"
            android:textSize="16dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitlePlantAccesories" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="-20dp"
            android:text="@string/txtPrice"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/btnAddToCart"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:text="@string/title_quantity"-->
<!--            app:layout_constraintStart_toEndOf="@+id/txtPrice"-->
<!--            app:layout_constraintTop_toTopOf="@+id/txtPrice" />-->

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/title_btnCart"
            android:textAlignment="center"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgPlantAccessories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtQuantityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:background="@color/green"
            android:text="@string/title_quantity"
            app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
            app:layout_constraintStart_toEndOf="@+id/txtPrice"
            app:layout_constraintTop_toTopOf="@+id/txtPrice" />

        <EditText
            android:id="@+id/edtQuantity"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/btnAddToCart"
            app:layout_constraintEnd_toStartOf="@+id/imgPlantAccessories"
            app:layout_constraintStart_toEndOf="@+id/txtQuantityTitle"
            app:layout_constraintTop_toTopOf="@+id/txtQuantityTitle"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/totalQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/edtQuantity"
            app:layout_constraintEnd_toStartOf="@+id/imgPlantAccessories"
            app:layout_constraintStart_toEndOf="@+id/txtTitlePlantAccesories"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>